--- a/SupermercadoAPI/appsettings.json
+++ b/SupermercadoAPI/appsettings.json
@@ -6,13 +6,12 @@
         }
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost;Database=Supermercado;Uid=root;Pwd=;"
+        "DefaultConnection": "Server=localhost;Database=Supermercado;Uid=root;Pwd=;" //Url de la base de datos MySQL
     },
     "JwtSettings": {
-        "Secret": "Clave_increiblemente_larga_y_compleja",
-        "Issuer": "SupermercadoAPI",
-        "Audience": "SupermercadoCliente",
-        "TokenExpirationInMinutes": 60
+        "Secret": "Clave_increiblemente_larga_y_compleja", //La clave secreta para firmar el token JWT
+        "Issuer": "SupermercadoAPI", //El emisor del token JWT
+        "Audience": "SupermercadoCliente", //El público del token JWT
     },
     "AllowedHosts": "*"
 }
