--- a/SupermercadoAPI/appsettings.json
+++ b/SupermercadoAPI/appsettings.json
@@ -9,9 +9,9 @@
         "DefaultConnection": "Server=localhost;Database=Supermercado;Uid=root;Pwd=;" //Url de la base de datos MySQL
     },
     "JwtSettings": {
-        "Secret": "Clave_increiblemente_larga_y_compleja", //La clave secreta para firmar el token JWT
+        "Secret": "AQUI_DEBE_HABER_UNA_CLAVE_LARGA_DE_AL_MENOS_32_CARACTERES_PARA_SEGURIDAD", //La clave secreta para firmar el token JWT
         "Issuer": "SupermercadoAPI", //El emisor del token JWT
-        "Audience": "SupermercadoCliente", //El público del token JWT
+        "Audience": "SupermercadoCliente" //El público del token JWT
     },
     "AllowedHosts": "*"
 }
